# geo-toolkit

./: .gitignore  LICENSE  README.md  pyproject.toml
geo_toolkit/: __init__.py  auditor.py  cli.py
geo_toolkit/auditors/: __init__.py  content_structure.py  crawler_access.py  entity_clarity.py  faq_density.py  llms_txt.py  passage_citability.py  schema_markup.py
geo_toolkit/reporters/: html_dashboard.py  json_report.py  markdown.py
geo_toolkit/scorers/: __init__.py  geo_scorer.py
tests/: test_auditors.py
